# vtkAnariApps

./: CMakeLists.txt  README.md  anariTutorialVTK.cpp  anariViewerVTK.cpp
cxx/: CMakeLists.txt
cxx/vtkAnariImguiViewer/: CMakeLists.txt  vtkAnariImguiViewer.cpp
cxx/vtkAnariObjViewer/: CMakeLists.txt  vtkAnariObjViewer.cpp
python/: activate-vtk.sh  anari_vtk_viewer_trame.py  setup-trame.sh  testAnari.py
trame/: activate-vtk.sh  anari_vtk_viewer_trame.py  setup-trame.sh
trame/examples/: trame_simple_cone.py
